--- a/posts/software.mdx
+++ b/posts/software.mdx
@@ -1,7 +1,12 @@
 ---
-title: Design critiques at Figma
-description: "Consider that for a moment: everything we see around us is assumed to have had a cause and is contingent upon."
+title: Software I use
+description: "A list of software I use day to day in my job as a project manager."
 date: Jan 2 2021
 ---
+
+[zoho email](https://www.zoho.com/mail/ "zoho email")
+[trello](https://trello.com/ "trello")
+
+
 
 This is an example post. There's another one [here](/posts/example-post).
