--- a/posts/resource-management-software.mdx
+++ b/posts/resource-management-software.mdx
@@ -8,3 +8,17 @@ date: Jan 2 2021
 [Resource management software](https://www.kelloo.com/resource-management/ "Resource management software") is an indispensable tool that empowers organizations to effectively oversee and optimize their valuable resources. From human capital and equipment to finances and materials, this comprehensive software provides a centralized platform for efficient resource planning, allocation, and tracking. With real-time visibility into resource availability and utilization, businesses can make data-driven decisions, ensuring that resources are utilized to their fullest potential. Whether it's scheduling employee shifts, tracking equipment usage, managing project budgets, or streamlining inventory levels, resource management software offers a holistic approach to resource optimization, fostering increased productivity and cost-effectiveness.
 
 One of the key benefits of resource management software is its ability to enhance collaboration and communication across departments. By breaking down silos and providing a shared platform, teams can seamlessly coordinate efforts, ensuring that resources are allocated to the right projects at the right time. This collaborative approach not only improves efficiency but also promotes transparency and accountability throughout the organization. Furthermore, resource management software often comes equipped with reporting and analytics capabilities, enabling businesses to gain deep insights into resource utilization patterns and identify areas for improvement. With the power of accurate data at their fingertips, businesses can make strategic resource allocation decisions, allocate budgets wisely, and respond proactively to changing demands, thereby maximizing their overall operational effectiveness.
+
+Resource management software has four main capabilities.
+
+
+[Resource planning](https://www.kelloo.com/resource-planning-software/ "Resource planning"). This is used to plan out which resources are working on which projects.
+
+
+[Resource capacity planning](https://www.kelloo.com/resource-capacity-planning-software/ "Resource capacity planning"). This is used to forecast and understand if you have enough resources to get your projects done.
+
+
+[What if scenario planning](https://www.kelloo.com/what-if-scenario-planning/ "What if scenario planning"). Used to understand how changes to plan timelines and resources can impact you.
+
+
+[Workload and utilization](https://www.kelloo.com/workload-utilization/ "workload and utlization"). Used to track the workload and free availability of your resources and teams.
