--- a/posts/project-planning-software.mdx
+++ b/posts/project-planning-software.mdx
@@ -9,3 +9,6 @@ date: Jan 2 2021
 
 The advantages of project planning software extend beyond basic task management, offering comprehensive features that cater to diverse project complexities. With robust planning and scheduling capabilities, project managers can identify critical paths, allocate resources judiciously, and mitigate potential bottlenecks before they arise. Furthermore, the software's reporting and analytics tools provide valuable insights into project performance, enabling stakeholders to make data-driven decisions and fine-tune their strategies for optimal results. As project requirements evolve and unforeseen challenges emerge, the flexibility of project planning software empowers teams to adapt swiftly, ensuring projects remain on track and align with organizational goals. Ultimately, this software serves as a cornerstone for effective project management, fostering collaboration, transparency, and successful project delivery.
 
+
+[g2 is a good place to search for project planning software](https://www.g2.com "g2")
+
